--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-        <a href="/" class="w3-bar-item w3-button w3-wide w3-xlarge">JUNLEE</a>
+        <a href="/" class="w3-bar-item w3-button w3-xlarge w3-hover-none">JUNLEE</a>
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
             {% for item in site.data.navigation %}
