--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,30 +10,41 @@
     <link rel="stylesheet" href="/assets/css/styles.css" />
     {% seo %}
     {% if jekyll.environment == "production" %}
-    <script src="/assets/mass.js"></script>
+    <script src="/assets/js/mass.js"></script>
     {% endif %}
 </head>
 
 <body>
 
-    <!-- Header -->
-    <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-        <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+
+
+    <!-- <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+        <img class="w3-image" src="/assets/images/me.jpg" alt="Architecture" width="1500" height="800">
         <div class="w3-display-middle w3-margin-top w3-center">
             <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span
                     class="w3-hide-small w3-text-light-grey">Architects</span></h1>
         </div>
-    </header>
+    </header> -->
     <!-- page content-->
     {% include navigation.html %}
     <div class="w3-content w3-padding-64">
-        {{ content }}
+        <div class="w3-panel">
+            <!-- Header -->
+            <div class="w3-row">
+                <div class="w3-half w3-container">
+                    <img src="/assets/images/me.jpg" alt="me">
+                    <!-- <h2>w3-half</h2> -->
+                </div>
+                <div class="w3-half w3-container">
+                    <!-- <h2>w3-half</h2> -->
+                </div>
+            </div>
+            {{ content }}
+        </div>
     </div>
     <!-- Footer -->
-    <footer class="w3-center w3-black w3-padding-16">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                class="w3-hover-text-green">w3.css</a></p>
-    </footer>
+    {% include footer.html %}
+
 </body>
 
 </html>
