jekyll-refresh-td

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,3 +12,14 @@ layout: default
 </p>
 
 {{ content }}
+
+<h1>post comments?</h1>
+<div class="w3-container">
+  <script src="https://utteranc.es/client.js"
+        repo="https://github.com/junleepepito/project-comments"
+        issue-term="pathname"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>
+</div>
