--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="w3-center w3-black w3-padding-16 footer">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-            class="w3-hover-text-green">w3.css</a></p>
-</footer>
+<!-- Footer -->
+<div class="footer w3-light-grey w3-tiny w3-border-top w3-border-light-gray w3-padding-small" {% if page.url== "/" %}style="position: fixed;"{% endif %}>
+  <script>document.write("<p>&copy; 2016 - " + new Date().getFullYear() + " junlee</p>");</script>
+</div>
