--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% feed_meta %}
-    <link href='/assets/images/favicon.ico' rel='icon' type='image/x-icon' />
-    <link rel="stylesheet" href="/assets/css/w3.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
-    {% if jekyll.environment == "production" %}
-    <script src="/assets/js/mass.js"></script>
-    {% endif %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    {% feed_meta %}
 </head>
 
-<body>
+<body class="w3-theme-l4">
+    {% include sidenav.html %}
+    <!-- Content -->
+    <div class="w3-content" style="max-width:1100px">
+        
+        {% include navigation.html %}
+        {% include header.html %}
 
-
-
-    <!-- <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-        <img class="w3-image" src="/assets/images/me.jpg" alt="Architecture" width="1500" height="800">
-        <div class="w3-display-middle w3-margin-top w3-center">
-            <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span
-                    class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-        </div>
-    </header> -->
-    <!-- page content-->
-    {% include navigation.html %}
-    <div class="w3-content w3-padding-64">
-        <div class="w3-panel">
-            <!-- Header -->
-            <div class="w3-row">
-                <div class="w3-half w3-container">
-                    <img src="/assets/images/me.jpg" alt="me">
-                    <!-- <h2>w3-half</h2> -->
-                </div>
-                <div class="w3-half w3-container">
-                    <!-- <h2>w3-half</h2> -->
-                </div>
+        {% assign handle = "hide" %}
+        {% case handle %}
+            {% when "hide" %} 
+                <!-- do nothing -->
+            {% else %}
+                {% include header_modal.html %}
+                {% include header_top3.html %}
+            <div class="w3-container">
+                {% include jheader_color.html %}
+                {% include jheader_concon.html %}
+                {% include jheader_color_theme.html %}
+                {% include ppr_image.html %}
+                {% include ppr_table_form.html %}
             </div>
+                {% include ppr_afterform.html %}
+                {% include progbar_start.html %}
+            <div class="w3-container">
+                {% include progbar_slide_manual.html %}
+                {% include progbar_slide_auto.html %}
+            </div>
+            <div class="w3-container">
+                {% include nav_acc_tabs.html %}
+            </div>
+            {% include foot_pagination.html %}
+        {% endcase %}
+
+        <!-- BLOG POSTS ONLY -->
+         <div class="w3-container">
             {{ content }}
         </div>
+        
+
+        {% include footer.html %}
     </div>
-    <!-- Footer -->
-    {% include footer.html %}
-
+    <script src="/assets/js/defbody.js"></script>
+     
 </body>
-
 </html>
