--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,10 +16,10 @@ layout: default
 <h1>post comments?</h1>
 <div class="w3-container">
   <script src="https://utteranc.es/client.js"
-        repo="https://github.com/junleepepito/project-comments"
+        repo="junleepepito/project-comments"
         issue-term="pathname"
         theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
-</script>
+  </script>
 </div>
